@@ -444,6 +444,7 @@ define function, begin
 435,parentslice,1,0           #return a slice's parent
 436,childcount,1,0            #return number of children of a slice
 437,lookupslice,2,0,0         #find a slice using a lookup code constant
+438,resetgame,0               #reset the game
 end
 
 #--------------------------------------------------------------------------
